--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+@font-face {
+    font-family: 'GDGonCampusTezpur';
+    src: url('/font.ttf') format('truetype');
+    /* Adjust the format depending on your font file */
+}
 
 @tailwind base;
 @tailwind components;
